fix: text clipping bug

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -2,10 +2,10 @@
 
 @keyframes marquee {
   0% {
-    transform: translateX(100%);
+    transform: translateX(200%);
   }
   100% {
-    transform: translateX(-100%);
+    transform: translateX(-200%);
   }
 }
 
